# website

./: .gitignore  .gitlab-ci.yml  README.md  TODO.md  docker-compose.yml  flake.nix  launch_db.sh
client/: index.html  package-lock.json  package.json  prepare_deploy.sh  tailwind.config.ts  tsconfig.json  vite.config.ts
public/: index.html
server/: Cargo.toml  Dockerfile  launch_db.sh
server/.sqlx/: query-01bd25a5698e76cdec3ae0eb1a638059914202a09aa606af11f38d7848f37c67.json  query-11746d3bbe0047f2995a6366ba00cfd84d0dbc1c83bef77cfc83af19e69d5b94.json  query-19151cfac96653a9e96a7861661475e422ff0d466e35a4ef2807f61630732d83.json  query-2ddadae9f5f80152c6ca301546b8abdd7e4bce1c9752be1ced1c5fca4668b484.json  query-3d42dc47e040d86fd2c268dcf227b968d538b2a038c630214781e6233dfba717.json  query-3ed6ac0e0cd01481011fa2b826c3f39e45d8f2a2777378b1c74c528b2acdfa8d.json  query-4043956ce48fb14f0409451e0291b91ad2924d0cf6aa20c56b15f960b0ede42b.json  query-4ba558a81017dfe3d22e15a97f7e57e8a5404d9910102f7bd87eb9b887e97fcb.json  query-50b803b27e0e1fc0adb33be7c766fd5e647e451fa4baf71cb2903670c515a150.json  query-668d7e49b4dae36348dbddca35bd8292cb59f2c0f8c20f4d0ac5faf058b183ac.json  query-8e6f6c7229ba7d13f4690c70229bac29698bbccae3adfb0f2cdcdff1daa9fe15.json  query-8f1f08cbbce0e8e66221f91873172663f6703d7355ca79c0fe00d2bcf1ed9dd4.json  query-a902b8930ff8374bde666f05bbab23a168364c617c4de636fe799cf00f8bc16b.json  query-b2cf8ace57c4a960f64b49060612f3c4918a7eb20626e5827dd2ebd0b5c65294.json  query-b619a4bd63f93ae2a43618f72b91f5ef61bb19c225bfa5714d2d3d0a94547d0a.json  query-e08b705c8f710fe9496a9b72c258fed4cd4c7952a9c5cb2a6f8e5564758c3fce.json
server/migrations/: 20241015041852_create_participants_table.sql  20241015182258_create_participants_table.sql  20241015182408_create_people_table.sql  20241015192002_create_co_table.sql  20241015192039_create_volunteer_table.sql  20241028145047_change_field_participants_table.sql  20241122164021_change_field_participants_table.sql
server/src/: config.rs  lib.rs  main.rs  participant.rs
server/src/auth/: auth_error.rs  claims.rs  keys.rs  mod.rs
server/src/email/: error.rs  mod.rs  oauth.rs
server/src/model/: competition.rs  dietary_restriction.rs  minimal_participant.rs  mod.rs  participant.rs  participant_info.rs  people.rs  preview_participant.rs  role.rs  tshirt_size.rs  university.rs
server/src/routes/: change_password.rs  delete_participant.rs  get_participant.rs  get_participants.rs  login.rs  mod.rs  new_participant.rs  patch_participant.rs  send_email_reset.rs  test_token.rs
server/src/utility/: mod.rs
(+93 files in other folders)
