[package]
name = "backend_cqi"
authors = ["Rob Wagner <rob@sombia.com>"]
license = ""
repository = "https://github.com/robertwayne/template-axum-solidjs-spa"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde", "clock"] }
dotenvy = { version = "0.15" }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "macros",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", default-features = false, features = [
    "compression-br",
    "cors",
    "fs",
    "trace",
] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "10.0.0", features = [
    "uuid-impl",
    "no-serde-warnings",
    "format",
] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
